# pyjktebop

./: .gitignore  README.md  README.rst  TESS-j052.fit  TESS-j052.par  example.fit  example.in  example.out  example.par  j052.in  jktebop.f  jktebop.mplstyle  pyjktebop.py  pyproject.toml  readme.txt  run-and-plot.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  pyjktebop.rst  usage.rst
examples/: TESS-j052.in
